# NBAGamePredictor-NMC

./: LICENSE  README.md  games.csv  nba_model.ipynb  pyproject.toml  sql_workbench.ipynb  workbench.ipynb
