[tool.poetry]
name = "celticspredictor-nmc"
version = "0.1.0"
description = "Neural Network to predict the Boston Celtics win/loss record in the 2021-22 NBA season"
authors = ["NoahChinitzGWU <noahchinitz@gwmail.gwu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysqlite3 = "^0.4.7"
pandas = "^1.5.1"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
