[tool.poetry]
name = "celticspredictor-nmc"
version = "0.1.0"
description = "Neural Network to predict if the home team won in any given match"
authors = ["NoahChinitzGWU <noahchinitz@gwmail.gwu.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pysqlite3 = "^0.4.7"
pandas = "^1.5.1"
numpy = "^1.23.5"
tensorflow = "^2.11.0"
keras = "^2.11.0"
ipykernel = "^6.19.2"
tqdm = "^4.64.1"
scikit-learn = "^1.2.0"
tensorboard = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
